# FTL-Translator

./: CMakeLists.txt  LICENSE  README.md  Syntax.docx  keywords.txt  lexical_analyzer.cpp  main.cpp  program.txt  token.cpp  trie.cpp
config/: keywords.txt  program.txt
include/: Lexer.h  RPN.h  RPN2.h  Syntaxer.h  TokenType.h  lexical_analyzer.h  syntax_analyzer.h  token.h  trie.h
src/: Lexer.cpp  Syntaxer.cpp  lexical_analyzer.cpp  main.cpp  syntax_analyzer.cpp  token.cpp  trie.cpp
